# himut

./: CONTRIBUTING.rst  README.md  files.txt  noxfile.py  pyproject.toml  setup.py  upload.sh
scripts/: adapter_miscalling_statistics.py  bam2bq2count.py  bam2ccs_statistics.py  bam2fastq_statistics.py  bam2pq2count.py  bam2qlen.py  bam2qname_counts.py  bam2seq_cov.py  bam2zmw.py  cat_fastq.py  ccs2bq_calculation.py  ccs2bq_distribution.py  ccs2pos2base_distribution.py  ccs2sbs_count.py  concat_som_germ_sbs52.py  concat_som_germ_sbs96.py  cos_sim.py  draw_hdp_exposure_barplot.py  draw_hdp_sbs52_signature_barplot.py  draw_hdp_sbs96_signature_barplot.py  draw_hdp_sbs96_to_sbs52_signature_barplot.py  draw_hdp_signature_barplot.py  draw_mhdp_exposure_barplot.py  draw_mhdp_signature_barplot.py  draw_sbs192_barplot.py  draw_sbs52_barplot.py  draw_sbs96_barplot.py  draw_tri_equal_weight_sbs96_barplot.py  dump_normalised_sbs52.py  dump_normalised_tri_equal_weight_sbs52.py  dump_normalised_tri_equal_weight_sbs96.py  dump_sbs52_counts.py  dump_sbs52_mutational_spectrum.py  dump_sbs96_counts.py  dump_som_germline_mutational_spectrum.py  dump_som_mutational_spectrum.py  dump_tri_equal_weight_sbs52.py  dump_tri_equal_weight_sbs96.py  dump_vcf_statistics.py  fastaSplit.py  (+42 more)
src/himut/: __init__.py  __main__.py  bamlib.py  bedlib.py  caller.py  cslib.py  dbslib.py  exceptions.py  gtlib.py  haplib.py  mutlib.py  normcounts.py  parse_args.py  phaselib.py  reflib.py  somlib.py  util.py  vcflib.py
src/himut.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_main.py
